# ai_my_health_manager

./: .dockerignore  .env.example  .gitattributes  .gitignore  APP_REQUIREMENTS.md  CONTEST_GUIDE.md  Dockerfile  LICENSE  PLAYMCP_REGISTRATION_GUIDE.md  PROGRAM_GUIDE.md  README.md  UPLOAD_GUIDE.md  apply.md  build.md  git_mcp.md  pubspec.yaml  pyproject.toml  regist.md
.github/workflows/: flutter-apk.yml
clean_app/: analysis_options.yaml  pubspec.yaml
clean_app/lib/: main.dart
clean_app/lib/src/: app.dart  app_services.dart  gemini_service.dart  health_home.dart  models.dart  product_health_home.dart  product_health_home_v2.dart  record_detail_page.dart  storage_service.dart
docs/: HEALTH_PROFILE_AND_DIET.md
flutter_app/: .apk_build_trigger_220  .apk_build_trigger_220b  BUILD_TRIGGER_2.2.0.txt  pubspec.yaml
flutter_app/lib/: main.dart
lib/: main.dart
scripts/: configure_clean_android.py  verify_mcp.py
src/ai_my_health_manager/: __init__.py  config.py  domain.py  domain_photo.py  server.py  server_new.py  server_photo.py  ui.py
tests/: test_calendar_sync.py  test_domain.py  test_photo_domain.py  test_server.py  test_server_photo.py
