[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-my-health-manager"
version = "0.1.0"
description = "Safety-focused MCP server for structured health drafts"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "mcp>=1.27,<2",
  "uvicorn>=0.35,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8.4,<9"]

[project.scripts]
ai-my-health-manager = "ai_my_health_manager.server_photo:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_my_health_manager"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
